@@ -16,45 +16,50 @@ class KChartWizardSelectDataPage;
 class KChartWizardSetupDataPage;
 class KChartWizardSelectChartTypePage;
 
+
 class KChartWizard : public KWizard
 {
     Q_OBJECT
 public:
     KChartWizard ( KChartPart* chart, QWidget *parent, const char* name,
-				   bool modal = true, WFlags f = 0 );
+		   bool modal = true, WFlags f = 0 );
     ~KChartWizard();
 
-    KChartPart* chart() const { return _chart; };
-  void setDataArea( const QString &area );
-  QString dataArea() const;
+    KChartPart* chart() const { return m_chart; };
 
-  enum RowCol { Row, Col };
+    void setDataArea( const QString &area );
+    QString dataArea() const;
 
-  void emitNeedNewData( const char* area, int rowcol, bool firstRowIsLegend,
-						bool firstColIsLabel );
+    enum RowCol { Row, Col };
 
-  virtual bool appropriate( QWidget * w ) const;
+    void emitNeedNewData( const char* area, int rowcol, 
+			  bool firstRowIsLegend, bool firstColIsLabel );
+
+    virtual bool appropriate( QWidget * w ) const;
 
 signals:
-  // valid values for rowcol: Row: data is in rows, Col: data is in cols
-  void needNewData( const char* area, int rowcol, bool firstRowIsLegend,
-					bool firstColIsLabel );
-  void finished();
-  void cancelled();
+    // valid values for rowcol: Row: data is in rows, Col: data is in cols
+    void needNewData( const char* area, int rowcol, 
+		      bool firstRowIsLegend, bool firstColIsLabel );
+    void finished();
+    void cancelled();
 
 protected slots:
-  virtual void next();
-  virtual void reject();
-  virtual void accept();
-  virtual void subType(int);
+    virtual void next();
+    virtual void reject();
+    virtual void accept();
+    virtual void subType(int);
+
 private:
-  KChartPart* _chart;
-  KChartWizardSelectDataPage* _selectdatapage;
-  KChartWizardSelectChartTypePage* _selectcharttypepage;
-  KChartWizardSelectChartSubTypePage* _selectchartsubtypepage;
-  KChartWizardSetupDataPage* _setupdatapage;
-  KChartWizardLabelsLegendPage* _labelslegendpage;
-  KChartWizardSetupAxesPage* _axespage;
+    // The chart itself.
+    KChartPart                          *m_chart;
+
+    //KChartWizardSelectDataPage          *_selectdatapage;
+    KChartWizardSelectChartTypePage     *m_selectcharttypepage;
+    KChartWizardSelectChartSubTypePage  *m_selectchartsubtypepage;
+    //KChartWizardSetupDataPage           *_setupdatapage;
+    KChartWizardLabelsLegendPage        *m_labelslegendpage;
+    KChartWizardSetupAxesPage           *m_axespage;
 };
 
 }  //KChart namespace
